@@ -1,19 +1,13 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
-import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.fpl.events.PopulateStandardDirectionsEvent;
 import uk.gov.hmcts.reform.fpl.handlers.PopulateStandardDirectionsHandler;
@@ -26,8 +20,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.fpl.NotifyTemplates.GATEKEEPER_SUBMISSION_TEMPLATE;
@@ -36,9 +28,7 @@ import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.callbackRequ
 @ActiveProfiles("integration-test")
 @WebMvcTest(NotifyGatekeeperController.class)
 @OverrideAutoConfiguration(enabled = true)
-class NotifyGatekeeperTest {
-    private static final String AUTH_TOKEN = "Bearer token";
-    private static final String USER_ID = "1";
+class NotifyGatekeeperTest extends AbstractControllerTest {
     private static final String GATEKEEPER_EMAIL = "FamilyPublicLaw+gatekeeper@gmail.com";
 
     @MockBean
@@ -47,25 +37,20 @@ class NotifyGatekeeperTest {
     @MockBean
     private PopulateStandardDirectionsHandler populateStandardDirectionsHandler;
 
-    @Autowired
-    private MockMvc mockMvc;
-
-    @Autowired
-    private ObjectMapper mapper;
+    NotifyGatekeeperTest() {
+        super("notify-gatekeeper");
+    }
 
     @Test
-    void shouldReturnErrorsWhenFamilymanNumberIsNotProvided() throws Exception {
-        MvcResult mvc = makeRequest(buildCallbackRequest(), "about-to-start");
-
-        AboutToStartOrSubmitCallbackResponse callbackResponse = mapper.readValue(
-            mvc.getResponse().getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
+    void shouldReturnErrorsWhenFamilymanNumberIsNotProvided() {
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails());
 
         assertThat(callbackResponse.getErrors()).containsExactly("Enter Familyman case number");
     }
 
     @Test
     void shouldReturnPopulatedDirectionsByRoleInSubmittedCallback() throws Exception {
-        makeRequest(callbackRequest(), "submitted");
+        postSubmittedEvent(callbackRequest());
 
         verify(populateStandardDirectionsHandler, times(1)).populateStandardDirections(
             any(PopulateStandardDirectionsEvent.class));
@@ -89,29 +74,16 @@ class NotifyGatekeeperTest {
             .put("caseUrl", "http://fake-url/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345")
             .build();
 
-        makeRequest(callbackRequest(), "submitted");
+        postSubmittedEvent(callbackRequest());
 
         verify(notificationClient, times(1)).sendEmail(GATEKEEPER_SUBMISSION_TEMPLATE, GATEKEEPER_EMAIL,
             expectedGatekeeperParameters, "12345");
     }
 
-    private MvcResult makeRequest(CallbackRequest request, String endpoint) throws Exception {
-        return mockMvc
-            .perform(post("/callback/notify-gatekeeper/" + endpoint)
-                .header("authorization", AUTH_TOKEN)
-                .header("user-id", USER_ID)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(mapper.writeValueAsString(request)))
-            .andExpect(status().isOk())
-            .andReturn();
-    }
-
-    private CallbackRequest buildCallbackRequest() {
-        return CallbackRequest.builder()
-            .caseDetails(CaseDetails.builder()
-                .id(12345L)
-                .data(ImmutableMap.of("data", "some data"))
-                .build())
+    private CaseDetails caseDetails() {
+        return CaseDetails.builder()
+            .id(12345L)
+            .data(Map.of("data", "some data"))
             .build();
     }
 }
